--- a/client/src/pages/auth/Auth.module.css
+++ b/client/src/pages/auth/Auth.module.css
@@ -1,19 +1,23 @@
 .auth {
     @apply p-4 flex justify-center items-center mt-20
-
     ;
 }
 
 .container {
-    @apply flex justify-center items-center border-black border rounded-xl
-        p-8 flex-col
+    @apply flex justify-center items-center border-inherit border rounded-xl
+        w-2/5 h-5/6
+    p-8 flex-col
     ;
 }
 
 .container input {
-    @apply p-1 m-3;
+    @apply p-3 m-3 border-4 rounded-2xl border-blue-50;
 }
 
 .btns {
-    @apply flex flex-row justify-between w-3/4;
+    @apply flex flex-row justify-between w-4/5 items-center;
+}
+
+.container input {
+    @apply w-[400px]
 }
