--- a/client/src/components/navbar/Navbar.module.css
+++ b/client/src/components/navbar/Navbar.module.css
@@ -3,20 +3,13 @@
 }
 
 .container {
-    @apply bg-amber-50 fixed flex justify-between items-center w-full;
+    @apply z-10 bg-blue-50 fixed flex justify-between items-center w-full;
 }
 
 .btns {
     @apply flex;
 }
 
-.btn {
-    @apply p-[8px] cursor-pointer rounded-2xl;
-}
-
-.btn:hover {
-    @apply bg-black text-white duration-700 cursor-pointer;
-}
 
 .title {
     @apply m-[18px];
